<resources>
    <string name="app_name">Covid-19 PWC</string>
    <string name="title_activity_maps">Map</string>
    <string name="new_recovered">New Recovered \n</string>
    <string name="country_name">Country Name</string>
    <string name="confirmed_cases">Confirmed Cases</string>
    <string name="more_details">More Details</string>
    <string name="open_case">Open Cases</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="covid_19_details">Covid 19 Details</string>
    <string name="source">Source</string>
    <string name="author">Author</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="country_name_not_available">Country name not available please try another </string>
    <string name="sorry_there_is_no_articles_available_for_this_country">Sorry, There is no articles available for this country</string>
    <string name="coudlnt_get_Address">Sorry, Could not get address</string>
</resources>